# expense-report-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev-build  dev-run  diesel.toml  docker-build  docker-run
src/: TransactionDao.rs  account_dao.rs  main.rs  models.rs  pg_conn.rs  schema.rs  test.rs  transaction_dao.rs
src/db/: account_dao.rs  budget_dao.rs  db_conn.rs  mod.rs  pg_conn.rs  search_dao.rs  transaction_dao.rs
src/rest/: account.rs  mod.rs  transaction.rs
static/: budget.html  index.html  local-index.html
static/css/: main.css
static/js/: app.js  controllers.js  directives.js  node-services.js  rest-services.js
static/partials/: bar-graph.html  budget.html  expense-table-side.html  expense-table.html  pie-graph.html  search.html
static/template/alert/: alert.html
static/template/dialog/: message.html
