[package]
name = "expense-report"
version = "0.1.0"
authors = ["Samuel Cox <crankydillo@gmail.com>"]

[[bin]]
name = "expense-report"
path = "src/main.rs"

#[[bin]]
#name = "test"
#path = "src/test.rs"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.41"
serde_derive = "1.0.41"
serde_json = "1.0.15"
itertools = "0.8.0"
time = "0.1.14"
postgres = { version = "0.15", features = ["with-chrono"] }
chrono = { version = "*", features = ["serde"] }
diesel = { version = "1.0.0", features = ["chrono"] }
r2d2-diesel = "*"
r2d2_postgres = "0.14.0"
r2d2 = "*"
